[package]
name = "raytracer"
version = "0.1.0"
authors = ["Nathaniel Fernandes <nathaniel.s.fernandes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rayon = "*"
rand = "*"
indicatif = "0.16.2"
oidn = "*"